--- a/src/main/res/layout/activity_role_picker.xml
+++ b/src/main/res/layout/activity_role_picker.xml
@@ -50,9 +50,9 @@
         android:orientation="vertical"
         android:layout_marginBottom="32dp">
 
-        <!-- Teacher Card -->
+        <!-- Presenter Card -->
         <androidx.cardview.widget.CardView
-            android:id="@+id/card_teacher"
+            android:id="@+id/card_presenter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
@@ -73,7 +73,7 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:src="@drawable/ic_teacher"
-                    android:contentDescription="@string/teacher"
+                    android:contentDescription="@string/presenter"
                     android:layout_marginEnd="16dp" />
 
                 <LinearLayout
@@ -85,7 +85,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/teacher"
+                        android:text="@string/presenter"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:textColor="@color/purple_700" />
