--- a/src/main/res/layout/activity_settings.xml
+++ b/src/main/res/layout/activity_settings.xml
@@ -100,7 +100,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Teacher API Key"
+                        android:text="Presenter API Key"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:textColor="@color/gray_800"
