--- a/src/main/res/drawable/button_danger.xml
+++ b/src/main/res/drawable/button_danger.xml
@@ -2,6 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/error_red" />
-    <corners android:radius="8dp" />
+    <corners android:radius="12dp" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/error_red" />
 </shape>
-
