--- a/src/main/res/xml/network_security_config.xml
+++ b/src/main/res/xml/network_security_config.xml
@@ -1,26 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="true">
-        <!-- Allow HTTP for localhost and Android emulator -->
-        <domain includeSubdomains="true">localhost</domain>
-        <domain includeSubdomains="true">10.0.2.2</domain>
-        <domain includeSubdomains="true">127.0.0.1</domain>
-        <!-- Add your local development server IP here -->
-        <domain includeSubdomains="true">192.168.1.100</domain>
-        <domain includeSubdomains="true">132.73.167.231</domain>
-        <domain includeSubdomains="true">132.72.167.231</domain>
-        <domain includeSubdomains="true">132.73.157.231</domain>
-    </domain-config>
-    
-    <!-- For production, remove cleartextTrafficPermitted="true" -->
-    <base-config cleartextTrafficPermitted="false">
+    <!-- Development configuration - allows all cleartext traffic -->
+    <base-config cleartextTrafficPermitted="true">
         <trust-anchors>
             <certificates src="system"/>
+            <certificates src="user"/>
         </trust-anchors>
     </base-config>
 </network-security-config>
-
-
-
-
-
