--- a/src/main/res/layout/activity_presenter_home.xml
+++ b/src/main/res/layout/activity_presenter_home.xml
@@ -30,6 +30,7 @@
 
             <!-- Welcome Message -->
             <TextView
+                android:id="@+id/text_welcome_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Welcome, Presenter!"
