--- a/src/main/res/menu/menu_presenter_home.xml
+++ b/src/main/res/menu/menu_presenter_home.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+
+    <item
+        android:id="@+id/action_create_seminar"
+        android:title="Create seminar"
+        android:icon="@drawable/ic_add"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_settings"
         android:title="@string/settings"
         android:icon="@drawable/ic_settings"
         app:showAsAction="never" />
-        
+
     <item
         android:id="@+id/action_change_role"
         android:title="@string/change_role"
         android:icon="@drawable/ic_swap_horiz"
         app:showAsAction="never" />
-        
+
 </menu>
