--- a/src/main/res/layout/activity_student_home.xml
+++ b/src/main/res/layout/activity_student_home.xml
@@ -13,6 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/primary_blue"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/SemScanToolbarPopup"
         app:title="@string/student_home_title"
         app:titleTextColor="@color/white" />
 
@@ -176,38 +177,5 @@
         </LinearLayout>
 
     </ScrollView>
-
-    <!-- Bottom Navigation -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/surface_light"
-        android:padding="16dp"
-        android:elevation="4dp">
-
-        <Button
-            android:id="@+id/btn_settings"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/settings"
-            android:textSize="16sp"
-            android:background="@drawable/button_secondary"
-            android:textColor="@color/gray_700"
-            android:layout_marginEnd="8dp" />
-
-        <Button
-            android:id="@+id/btn_change_role"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/change_role"
-            android:textSize="16sp"
-            android:background="@drawable/button_secondary"
-            android:textColor="@color/gray_700"
-            android:layout_marginStart="8dp" />
-
-    </LinearLayout>
 
 </LinearLayout>
