--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -24,6 +24,18 @@
     
     <style name="Theme.SemScan.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     
+    <!-- Light theme for role selection (prevents dark mode) -->
+    <style name="Theme.SemScan.Light" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:forceDarkAllowed">false</item>
+    </style>
+    
     <!-- Button styles -->
     <style name="SemScanButton" parent="Widget.MaterialComponents.Button">
         <item name="android:layout_margin">8dp</item>
